src/test/compile-fail/spawn-non-nil-fn.rs
// error-pattern: mismatched types

use std;
import task;

fn main() { task::spawn(sendfn() -> int { 10 }); }
